[package]
name = "pitaya"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1" , features = ["full"]}


# GUI
egui = {  path = "modules/egui/egui" }
#eframe = "0.18.0"
egui_glium = { path = "modules/egui_glium" }
glium = "0.31"
glutin = "0.28.0"
# glfw = "0.45.0"
image = { version = "0.24.3", default-features = false, features = ["png"] }

# Modules
ptya-common = { path = "modules/ptya-common" }
#ptya-glfw-glium = { path = "modules/ptya-glfw-glium" }
ptya-frontend = { path = "modules/ptya-frontend" }

#ptya-map = { path = "modules/ptya-map" }
# ptya-map-v2 = { path = "modules/ptya-map-v2" }

log = "0.4.17"

[target.aarch64-unknown-linux-gnu]

[workspace]
members = [
    "modules/atlas",
    "modules/egui/egui",
    "modules/egui/emath",
    "modules/egui/epaint",
    "modules/egui/egui-winit",
    #"modules/ptya-map",
    "modules/ptya-map-v2",
    "modules/ptya-common",
   # "modules/ptya-spotify",
    "modules/ptya-frontend",
    "modules/egui_glium",
    "modules/delaunator",
]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
