[package]
name = "pitaya"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20" , features = ["full"]}


# GUI
egui = {  path = "modules/libs/egui/egui" }
#eframe = "0.18.0"
egui_glium = { path = "modules/libs/egui_glium" }
glium = "0.31"
glutin = "0.28"
# glfw = "0.45.0"
image = { version = "0.24", default-features = false, features = ["png"] }

# Modules
ptya-core = { path = "modules/ptya-core" }
ptya-layout = { path = "modules/ptya-frontend" }
#ptya-glfw-glium = { path = "modules/ptya-glfw-glium" }
#ptya-frontend = { path = "modules/ptya-frontend" }

#ptya-map = { path = "modules/ptya-map" }
# ptya-map-v2 = { path = "modules/ptya-map-v2" }

log = "0.4"

[target.aarch64-unknown-linux-gnu]

[workspace]
members = [
    "modules/libs/atlas",
    "modules/libs/delaunator",
    # EGUI
    "modules/libs/egui/egui",
    "modules/libs/egui/emath",
    "modules/libs/egui/epaint",
    "modules/libs/egui/egui-winit",
    "modules/libs/egui_glium",

    #"modules/ptya-map",
    #"modules/apps/ptya-map-v2",
    # Apps
    "modules/apps/ptya-playground",
    # Modules
    "modules/ptya-core",
    "modules/ptya-icon",
    "modules/ptya-frontend"
   # "modules/ptya-spotify",
]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
