[package]
name = "pitaya"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20" , features = ["full"]}


# GUI
egui = "0.19.0"
#eframe = "0.18.0"
egui_glium = { path = "modules/libs/egui_glium" }
glium = "0.32.1"
glutin = "0.29.1"
# glfw = "0.45.0"

# Modules
ptya-core = { path = "modules/ptya-core" }
ptya-frontend = { path = "modules/ptya-frontend" }
#ptya-glfw-glium = { path = "modules/ptya-glfw-glium" }
#ptya-frontend = { path = "modules/ptya-frontend" }

#ptya-map = { path = "modules/ptya-map" }
# ptya-map-v2 = { path = "modules/ptya-map-v2" }

log = "0.4"

[target.aarch64-unknown-linux-gnu]

[workspace]
members = [
    "modules/libs/map_renderer",
    "modules/libs/delaunator",
    # EGUI
    "modules/libs/egui_glium",

    #"modules/ptya-map",
    #"modules/apps/ptya-map-v2",
    # Apps
    "modules/apps/ptya-playground",
    #"modules/apps/ptya-map",
    # Modules
    "modules/ptya-animation",
    "modules/ptya-asset",
    "modules/ptya-color",
    "modules/ptya-core",
    "modules/ptya-icon",
    "modules/ptya-frontend"
   # "modules/ptya-spotify",
]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
