[package]
name = "atlas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
mathie = "0.5.0"
glium = "0.31"
log = "0.4.17"
earcutr = "0.2.0"
palette = "0.6.1"

delaunator = { path = "../delaunator" }
