[package]
name = "ptya-asset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
anyways = { version = "0.3.0", features = ["sync", "send"] }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }

serde_json = "1"

