[package]
name = "ptya-color"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"

serde = { version = "1", features = ["derive"] }
egui = { path = "../libs/egui/egui" }
ptya-animation = { path = "../ptya-animation" }

material-color-utilities-rs = "0.1.0"
palette = "0.6.1"
