[package]
name = "ptya-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
image = { version = "0.24.3", default-features = false, features = ["png"] }
egui = {  path  = "../egui/egui" }
glium = "0.31"

tokio = { version = "1.20.1" , features = ["full"]}

log = "0.4.17"
simplelog = { version = "^0.11.0", features = ["paris"] }
rayon = "1.5.3"