[package]
name = "ptya-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Errors
anyways = { version = "0.3", features = ["send", "sync"] }

# Async
tokio = { version = "1.20" , features = ["full"]}

# Logging
log = "0.4"
simplelog = { version = "0.11", features = ["paris"] }
lyon = "1.0"

# Color
material-color-utilities-rs = "0.1.0"

# Util
fxhash = "0.2"
mathie = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Frontend
egui = {  path  = "../libs/egui/egui" }
epaint = {  path  = "../libs/egui/epaint" }
glium = "0.31"

ttf-parser = "0.15"
ab_glyph = "0.2"

image = { version = "0.24", default-features = false, features = ["png"] }
palette = "0.6"
