[package]
name = "ptya-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ptya-core = { path = "../ptya-core" }
ptya-icon = { path = "../ptya-icon" }
log = "0.4"
anyways = { version = "0.3.0", features = ["sync", "send"] }

glium = "0.31"
egui_glium = { path = "../libs/egui_glium" }
egui = { path = "../libs/egui/egui" }

# Apps
ptya-playground = { path = "../apps/ptya-playground" }
