[package]
name = "ptya-glfw-glium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"

glfw = "0.45.0"
glium = { version = "0.31.0", default-features = false }
bytemuck = "1.11.0"

egui = { path = "../egui/egui", default-features = false, features = [
    "bytemuck",
] }
