[package]
name = "ptya-map-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ptya-common = { path = "../ptya-common" }
log = "0.4.17"
anyways = "0.2.0"
fxhash = "0.2.1"
mathie = "0.5.0"
glium = "0.31"
egui = { path = "../egui/egui" }
egui_glium = { path = "../egui_glium" }


atlas = { path = "../atlas" }

reqwest = { version = "0.11.11", features = ["json", "blocking"] }
tokio = { version = "1.20.1", features = ["full"] }

flate2 = "1.0"
protobuf = "3.1.0"

[build-dependencies]
protobuf-codegen = "3.1.0"