[package]
name = "ptya-map"
version = "0.1.0"
edition = "2021"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ptya-common = { path = "../ptya-common" }
egui_glium = { path = "../egui_glium" }
glium = "0.31"
image = { version = "0.24.3", default-features = false, features = ["png"] }

fxhash = "0.2.1"
egui = { path = "../egui/egui"}
env_logger = "0.9.0"
anyways = "0.2.0"
thiserror = "1.0.31"

# Query
reqwest = { version = "0.10.6", features = ["json", "blocking", "native-tls-vendored"] }
protobuf = "3.1.0"
flate2 = "1.0"
zstd = "0.11.2+zstd.1.5.2"

# Cache
serde = { version = "1.0.140", features = ["derive"] }
bincode = { version = "2.0.0-rc.1", features = ["serde"] }
rayon = "1.5.3"

# Display
euclid = "0.22.7"
lyon_tessellation = { version = "1.0.1", features = ["serialization"] }

[build-dependencies]
protobuf-codegen = "3.1.0"