[package]
name = "ptya-spotify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ptya-common = { path = "../ptya-common" }
image = { version = "0.24.3", default-features = false, features = ["png"] }

log = "0.4.17"
anyways = "0.2.0"
egui = { path = "../egui/egui" }
serde = { version = "1.0.140" , features = ["derive"]}
serde_json = "1.0.82"
tokio = { version = "1.20.1" , features = ["full"]}
thiserror = "1.0.31"

# Spotify
librespot = { version = "0.4.1" , default-features = false, features = ["alsa-backend"]}
rspotify = "0.11.5"
futures = "0.3"