[package]
name = "ptya-map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ptya-core = { path = "../../ptya-core" }
ptya-icon = { path = "../../ptya-icon" }
log = "0.4"
anyways = { version = "0.3.0", features = ["sync", "send"] }
ahash = "0.8.0"
mathie = "0.5"
glium = "0.32"
egui = "0.19.0"
egui_glium = { path = "../../libs/egui_glium" }

map_renderer = { path = "../../libs/map_renderer" }
material-color-utilities-rs = "0.1.0"

reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }

flate2 = "1.0"
protobuf = "3.1"

[build-dependencies]
protobuf-codegen = "3.1"