[package]
name = "ptya-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { path = "../../libs/egui/egui" }
ptya-core = { path = "../../ptya-core" }
ptya-icon = { path = "../../ptya-icon" }
glium = "0.31"
